--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4588,3 +4588,44 @@ select
 	vertical-align: middle
 	background-image: url(../img/oto-platinum/icon.svg)
 	background-size: cover
+
+.card-locked
+	padding: 0 !important
+	position: relative
+	@media (max-width: 767.98px)
+		margin-top: 34px
+	.locked 
+		position: absolute
+		top: -34px
+		left: 50%
+		transform: translateX(-50%)
+		text-align: center
+		width: 236px
+		background: #e8e8e8
+		font-size: 12px
+		border-top-left-radius: 8px
+		border-top-right-radius: 8px
+		padding: 8px 30px
+
+.op-3
+	opacity: .3
+
+.bg-gray
+	background: #e8e8e8
+
+.h-xl-75
+	@media (min-width: 1200px)
+		height: 75% !important
+
+.h-xl-82
+	@media (min-width: 991px)
+		height: 82% !important
+
+.grayscale
+	filter: grayscale(1)
+	opacity: .6
+
+.modal-right-2
+	.modal-dialog
+		@media (min-width: 768px)
+			max-width: 400px
