--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4629,3 +4629,21 @@ select
 	.modal-dialog
 		@media (min-width: 768px)
 			max-width: 400px
+
+.text-orange-2
+	color: #fda600
+
+.st-2
+	text-transform: initial
+
+.bunner-bg7
+	position: absolute
+	right: 0
+	top: 0
+	z-index: -1
+	max-width: 140%
+	@media (max-width: 991.98px)
+		bottom: 0
+		left: 16%
+		right: auto
+		max-width: 140%
