--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4647,3 +4647,39 @@ select
 		left: 16%
 		right: auto
 		max-width: 140%
+
+.header-PCOS
+	padding-top: 150px !important
+	padding-bottom: 202px !important
+	background-image: url(../img/disease/header-PCOS.jpg) !important
+	background-size: cover
+	@media (max-width: 575.98px)
+		padding-top: 57px !important
+		padding-bottom: 360px !important
+		background-image: url(../img/disease/header-PCOS-mobile.jpg) !important
+
+
+.header-DNA
+	padding-top: 90px !important
+	padding-bottom: 100px !important
+	background-image: url(../img/disease/header-PCOS.jpg) !important
+	background-size: auto 100%
+	@media (max-width: 575.98px)
+		padding-top: 57px !important
+		padding-bottom: 360px !important
+		background-image: url(../img/disease/header-PCOS-mobile.jpg) !important
+		background-size: cover
+
+.scroll-wrap-4
+	.scroll	
+		&::-webkit-scrollbar
+			width: 7px
+		&::-webkit-scrollbar-track
+			background-color: $color-border
+			border-radius: 4px
+		&::-webkit-scrollbar-thumb
+			background-color: $color-success
+			border-radius: 4px
+
+.bg-green-4
+	background-color: #41c752 !important
