--- a/css/style.css
+++ b/css/style.css
@@ -4681,4 +4681,53 @@ select.form-control-test {
 .bg-green-4 {
   background-color: #41c752 !important; }
 
+.header-oto {
+  padding-top: 120px;
+  padding-bottom: 400px;
+  background-image: url(../img/oto/bg-oto.svg);
+  background-position: center center;
+  background-size: cover; }
+
+.shadow-oto {
+  box-shadow: 0 16px 40px rgba(112, 144, 176, 0.08); }
+
+.text-green {
+  color: #41C752; }
+
+.mt-330 {
+  margin-top: -330px; }
+  @media (max-width: 767.98px) {
+    .mt-330 {
+      margin-top: -30px; } }
+
+.oto-gray {
+  background: #F7FAFC;
+  border-radius: 28px;
+  padding: 300px 25px 80px;
+  margin-top: 30px; }
+  @media (max-width: 991.98px) {
+    .oto-gray {
+      padding: 200px 25px 80px; } }
+  @media (max-width: 767.98px) {
+    .oto-gray {
+      padding: 50px 25px; } }
+  @media (max-width: 575.98px) {
+    .oto-gray {
+      padding: 50px 10px; } }
+
+.mt-520 {
+  margin-top: -520px; }
+  @media (max-width: 991.98px) {
+    .mt-520 {
+      margin-top: -350px; } }
+  @media (max-width: 767.98px) {
+    .mt-520 {
+      margin-top: -180px; } }
+  @media (max-width: 575.98px) {
+    .mt-520 {
+      margin-top: -110px; } }
+
+.lh-1-2 {
+  line-height: 1.2; }
+
 /*# sourceMappingURL=style.css.map */
