--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4683,3 +4683,47 @@ select
 
 .bg-green-4
 	background-color: #41c752 !important
+
+// 06.05.2021
+
+.header-oto
+	padding-top: 120px
+	padding-bottom: 400px
+	background-image: url(../img/oto/bg-oto.svg)
+	background-position: center center
+	background-size: cover
+
+.shadow-oto
+	box-shadow: 0 16px 40px rgba(112, 144, 176, .08) 
+
+.text-green
+	color: #41C752
+
+.mt-330
+	margin-top: -330px
+	@media (max-width: 767.98px)
+		margin-top: -30px 
+
+.oto-gray 
+	background: #F7FAFC
+	border-radius: 28px
+	padding: 300px 25px 80px
+	margin-top: 30px
+	@media (max-width: 991.98px)
+		padding: 200px 25px 80px
+	@media (max-width: 767.98px)
+		padding: 50px 25px 
+	@media (max-width: 575.98px)
+		padding: 50px 10px 
+
+.mt-520
+	margin-top: -520px
+	@media (max-width: 991.98px)
+		margin-top: -350px
+	@media (max-width: 767.98px)
+		margin-top: -180px
+	@media (max-width: 575.98px)
+		margin-top: -110px
+
+.lh-1-2
+	line-height: 1.2
