--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4693,9 +4693,6 @@ select
 	background-position: center center
 	background-size: cover
 
-.shadow-oto
-	box-shadow: 0 16px 40px rgba(112, 144, 176, .08) 
-
 .text-green
 	color: #41C752
 
@@ -4727,3 +4724,48 @@ select
 
 .lh-1-2
 	line-height: 1.2
+
+.div-insight-img
+	position: absolute
+	top: 5%
+	left: 9%
+	right: 9.3%
+
+.oto-warning-top
+	color: #F97676
+	background: #FBDEDE
+	padding: 10px 20px
+	font-size: 16px
+	@media (max-width: 575.98px)
+		font-size: 14px
+
+.oto-warning
+	color: #F97676
+	background: #FBDEDE
+	padding: 10px 20px
+	font-size: 16px
+	position: absolute
+	top: 0
+	right: 0
+	left: 0
+	z-index: 2
+	@media (max-width: 991.98px)
+		font-size: 12px
+	@media (max-width: 575.98px)
+		font-size: 8px
+		padding: 6px 20px
+
+.embed-oto 
+	&:before 
+		padding-top: 63%
+	.play-button
+		@media (max-width: 767.98px)
+			width: 45px
+			height: 45px
+			margin-top: 33%
+		@media (max-width: 575.98px)
+			width: 30px
+			height: 30px
+
+.object-cover 
+	object-fit: cover
